# Based on https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = mm-workflows
version = 0.0.1
author = Jake Fennick
author_email = jake.fennick@axleinfo.com
description = Molecular modeling workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PolusAI/mm-workflows
project_urls =
    Bug Tracker = https://github.com/PolusAI/mm-workflows/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    beautifulsoup4 # Solely for parsing gromacs mdp options html

[options.extras_require]
test =
    mypy
    %(mypy_types)s
    pylint
    autopep8
    pre-commit

# NOTE: The following list was generated using the command
# mypy --install-types
# When updating this list, also update .pre-commit-config.yaml
# Alternatively, the --non-interactive flag can be used install these automatically.
# See https://mypy.readthedocs.io/en/stable/command_line.html#miscellaneous
mypy_types =
    types-beautifulsoup4
    types-requests
    types-setuptools

all =
    %(test)s

[options.entry_points]
console_scripts =
    mm-workflows = mm_workflows.main:main

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/mm_workflows/_version.py
versionfile_build = mm_workflows/_version.py
tag_prefix = ''
